@@ -87,7 +87,7 @@ By default, @command{make install} will install @value{tramp}'s files in
 installation prefix other than @file{@value{instprefix}} by giving
 @command{configure} the option @option{--prefix=PATH}.
 @ifset emacs
-On Linux systems, it has been reported useful to apply
+On GNU/Linux systems, it has been reported useful to apply
 
 @example
 ./configure --prefix=/usr
